# careerpilot-cn

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  portfolio.md
src/careerpilot/: __init__.py  adapters.py  agents.py  api.py  cli.py  companies.py  config.py  db.py  matching.py  models.py  resume.py  service.py  sources.py  taxonomy.py
src/careerpilot/static/: app.js  index.html  styles.css
tests/: test_adapters.py  test_agents.py  test_api.py  test_db.py  test_resume_matching.py  test_service.py  test_sources.py
tests/fixtures/: company_home.html  official_jobs.html
