[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "careerpilot-cn"
version = "0.1.0"
description = "Agentic job research and decision platform for official Chinese corporate career sites"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hexi Wu" }]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "pdfplumber>=0.11,<1",
  "pydantic>=2.8,<3",
  "python-multipart>=0.0.9,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]
browser = ["playwright>=1.46,<2"]

[project.scripts]
careerpilot = "careerpilot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/careerpilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
